--- a/css/styles.css
+++ b/css/styles.css
@@ -35,15 +35,22 @@ body {
     margin: 0 auto;
 }
 
+.tipos-contenedor h2 {
+    text-align: center;
+    margin: 2rem 0;
+}
+
 h1 {
     font-family: var(--primaryFont);
     color: var(--primaryColorAlt);
+    font-size: 3rem;
 }
 
 h2 {
     font-family: var(--primaryFont);
     color: var(--primaryColorAlt);
-    font-size: 2.5rem;
+    font-size: 2.3rem;
+    text-align: left;
 }
 
 span:hover {
@@ -118,4 +125,153 @@ footer {
     color: var(--lightGrayColor);
     text-align: center;
     padding: 2rem;
+}
+
+@media (min-width: 768px) {
+    .logo {
+        font-size: 5rem;
+        margin: 0;
+        margin-left: 2rem;
+        align-self: flex-start;
+        margin-right: auto;
+    }
+
+    .nav-contenedor {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+    }
+    
+    .nav-contenedor nav ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    button{
+        font-size: 1.25em;
+        font-weight: bold;
+        padding: 10px 30px;
+        border-radius: 5px;
+        border: 2px solid rgba(0,0,0,0.3);
+        box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+        color: white;
+        background-color: var(--primaryColorAlt);
+    }
+
+    button:hover{
+        background-color: rgb(101, 33, 165);
+    }
+
+    h2 {
+        font-size: 3rem;
+    }
+
+    #hero{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        flex-direction: column;
+        height: 90vh;
+        background-image: linear-gradient(
+            0deg,
+            rgba(0,0,0,0.5),
+            rgba(0,0,0,0.5)
+        )
+        ,url("../img/hero.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+    }
+
+    #hero h1{
+        font-size: 7rem;
+        color: white;
+    }
+
+    .ventajas-desventajas {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .columnas { 
+        display: flex;
+        flex: 1;
+        padding: 2rem;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .columnas h2 {
+        margin-bottom: 1rem;
+        text-align: center;
+    }
+
+    .tipos {
+        padding: 20px;
+    }
+    .tipos h2 {
+        text-align: center;
+        color: var(--primaryColorAlt);
+    }
+    .tipos-contenedor {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+    .tipo {
+        display: flex;
+        align-items: center;
+        background-color: var(--grayColor);
+        padding: 2rem;
+        border-radius: 10px;
+    }
+    .tipo img {
+        width: 15rem;
+        height: 100px;
+        margin-right: 20px;
+        border-radius: 10px;
+    }
+    .tipo h2 {
+        flex: 1;
+        margin: 0;
+        color: var(--primaryColorAlt);
+    }
+    .tipo p {
+        flex: 2;
+        margin: 0;
+    }
+
+    .ir-arriba {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        background-color: var(--primaryColorAlt);
+        color: #fff;
+        padding: 10px 20px;
+        cursor: pointer;
+        display: none;
+        z-index: 1000;
+      }
+      
+    .ir-arriba:hover {
+      background-color: var(--primaryColor);
+      color: white;
+    }
+
+    footer {
+        background-color: #191c1e;
+        text-align: center;
+        padding: 20px 0;
+        font-size: 16px;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+      }
 }
