--- a/css/styles.css
+++ b/css/styles.css
@@ -155,10 +155,10 @@ footer {
     button{
         font-size: 1.25em;
         font-weight: bold;
-        padding: 10px 30px;
-        border-radius: 5px;
-        border: 2px solid rgba(0,0,0,0.3);
-        box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+        padding: 1rem 3rem;
+        border-radius: 0.5rem;
+        border: 0.2rem solid rgba(0,0,0,0.3);
+        box-shadow: 0.2rem 0.2rem 1rem rgba(0,0,0,0.5);
         color: white;
         background-color: var(--primaryColorAlt);
     }
@@ -214,35 +214,41 @@ footer {
     }
 
     .tipos {
-        padding: 20px;
+        padding: 2rem;
     }
+
     .tipos h2 {
         text-align: center;
         color: var(--primaryColorAlt);
     }
+
     .tipos-contenedor {
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        gap: 2rem;
     }
+
     .tipo {
         display: flex;
         align-items: center;
         background-color: var(--grayColor);
         padding: 2rem;
-        border-radius: 10px;
+        border-radius: 1rem;
     }
+
     .tipo img {
         width: 15rem;
-        height: 100px;
-        margin-right: 20px;
-        border-radius: 10px;
+        height: 10rem;
+        margin-right: 2rem;
+        border-radius: 1rem;
     }
+
     .tipo h2 {
         flex: 1;
         margin: 0;
         color: var(--primaryColorAlt);
     }
+
     .tipo p {
         flex: 2;
         margin: 0;
@@ -250,16 +256,16 @@ footer {
 
     .ir-arriba {
         position: fixed;
-        bottom: 20px;
-        right: 20px;
+        bottom: 2rem;
+        right: 2rem;
         background-color: var(--primaryColorAlt);
         color: #fff;
-        padding: 10px 20px;
+        padding: 1rem 2rem;
         cursor: pointer;
         display: none;
         z-index: 1000;
         border-radius: 1rem;
-      }
+    }
       
     .ir-arriba:hover {
       background-color: var(--primaryColor);
@@ -269,10 +275,111 @@ footer {
     footer {
         background-color: #191c1e;
         text-align: center;
-        padding: 20px 0;
-        font-size: 16px;
+        padding: 2rem 0;
+        font-size: 1.6rem;
         left: 0;
         bottom: 0;
         width: 100%;
-      }
+        position: absolute;
+    }
+
+    .participantes {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+    }
+
+    .participantes ul {
+        list-style: number;
+        display: inline-block;
+        color: white;
+        font-size: 3rem;
+        font-weight: bold;
+        text-align: left;
+        max-width: 30%;
+        margin: 0;
+        padding: 0;
+        padding-top: 1rem;
+    }
+
+    .participantes ul li {
+        padding-left: 0;
+    }
+
+    .participantes-h2{
+        color: var(--primaryColorAlt);
+        font-size: 3rem;
+        text-align: center;
+    }
+
+    #particles-js {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+    }
+    
+    #body-contacto {
+        overflow: hidden;
+    }
+
+    .contact-form-container {
+        background: rgba(0, 0, 0, 0.7);
+        padding: 20px;
+        border-radius: 10px;
+        max-width: 400px;
+        width: 100%; /* Ajusta el ancho al 100% para ocupar todo el espacio disponible */
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    }
+    
+    
+    
+    
+    .contact-form-container h1 {
+        font-size: 3rem;
+        text-align: center;
+        margin-bottom: 2rem;
+    }
+    
+    .contact-form-container label {
+        font-size: 1.5rem;
+        font-family: "Roboto", sans-serif;
+        color: white;
+        display: block;
+        margin-bottom: 5px;
+    }
+    
+    .contact-form-container input,
+    .contact-form-container textarea {
+        font-size: 1.5rem;
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 1rem;
+        border: none;
+        border-radius: 5px;
+        background: #474b4f;
+        color: #ffffff;
+        outline: none;
+    }
+    
+    .contact-form-container button {
+        width: 100%;
+        padding: 10px;
+        border: none;
+        border-radius: 5px;
+        background: #86c232;
+        color: #222629;
+        font-size: 16px;
+        cursor: pointer;
+    }
+    
+    .contact-form-container button:hover {
+        background: #61892f;
+    }
 }
