--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,7 @@ img {
     height: auto;
 }
 
-.logo {
+.logo a {
     display: flex;
     justify-content: center;
     margin: 0 auto;
@@ -128,7 +128,7 @@ footer {
 }
 
 @media (min-width: 768px) {
-    .logo {
+    .logo a {
         font-size: 5rem;
         margin: 0;
         margin-left: 2rem;
