--- a/css/styles.css
+++ b/css/styles.css
@@ -325,6 +325,10 @@ footer {
         overflow: hidden;
     }
 
+    #body-sobre-nosotros {
+        overflow: hidden;
+    }
+
     .contact-form-container {
         background: rgba(0, 0, 0, 0.7);
         padding: 20px;
