--- a/css/styles.css
+++ b/css/styles.css
@@ -321,11 +321,7 @@ footer {
         z-index: -1;
     }
     
-    #body-contacto {
-        overflow: hidden;
-    }
-
-    #body-sobre-nosotros {
+    body.contacto, html.contacto, body.sobre-nosotros, html.sobre-nosotros {
         overflow: hidden;
     }
 
@@ -334,16 +330,13 @@ footer {
         padding: 20px;
         border-radius: 10px;
         max-width: 400px;
-        width: 100%; /* Ajusta el ancho al 100% para ocupar todo el espacio disponible */
+        width: 100%;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     }
-    
-    
-    
     
     .contact-form-container h1 {
         font-size: 3rem;
