--- a/css/styles.css
+++ b/css/styles.css
@@ -283,46 +283,23 @@ footer {
         position: absolute;
     }
 
-    .participantes {
+    .video-container {
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 100%;
         height: 100%;
-    }
-
-    .participantes ul {
-        list-style: outside;
-        display: inline-block;
-        color: white;
-        font-size: 3rem;
-        font-weight: bold;
-        text-align: left;
-        max-width: 30%;
-        margin: 0;
-        padding: 0;
-        padding-top: 1rem;
-    }
-
-    .participantes ul li {
-        padding-left: 0;
-    }
-
-    .participantes-h2{
-        color: var(--primaryColorAlt);
-        font-size: 3rem;
-        text-align: center;
+        margin-top: 6rem;
     }
 
     #particles-js {
-        position: absolute;
+        position: fixed;
         width: 100%;
         height: 100%;
         z-index: -1;
     }
     
-    #body-contacto, #body-sobre-nosotros {
-        overflow-y: hidden;
+    #body-contacto {
+        overflow: hidden;
     }
 
     .contact-form-container {
